feat(build): convert jdbt to Bazel
Replace the Gradle build with Bazel 9.1.1, package-owned BUILD files, explicit source lists, palantir-java-format, strict Java analysis, coverage gates, and GitHub Actions CI via tools/check.sh.

Close the parity gaps found by three review rounds: Ruby !omap repository parsing, package-data data/ layout and artifact execution, schema hash content tracking, standalone import ordering and resume diagnostics, and SQL Server create/drop/import maintenance options.

Expand coverage with filesystem transcript integration tests, package artifact runtime execution, H2-backed runtime integration, and focused SQL Server driver parity tests. Record the final compatibility status and evidence in plans/jdbt.